--- a/HTML/Sem1Project/page1.html
+++ b/HTML/Sem1Project/page1.html
@@ -58,6 +58,7 @@
     </style>
 </head>
 <body>
+    <form action="page2.html" method="get">
     <header>
         <h1>BD Froup</h1>
         <p>Welcome to our Hospital</p>
@@ -75,6 +76,7 @@
             <!-- Description of services offered -->
             For Appoinment with our best doctors Press the Register now Button
         </p>
+        <input type="submit" value="Regiser">
 
         <h2 id="about">About Us</h2>
         <p>
@@ -94,5 +96,6 @@
     <footer>
         &copy; 2023 Hospital Name. All rights reserved.
     </footer>
+    </form>
 </body>
 </html>
