--- a/HTML/Sem1Project/page2.html
+++ b/HTML/Sem1Project/page2.html
@@ -65,5 +65,6 @@
             <input type="submit" value="Schedule Appointment">
         </form>
     </div>
+    <form action="page3.html" method="get"></form>
 </body>
 </html>
