--- a/HTML/hello.html
+++ b/HTML/hello.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -43,3 +43,123 @@
 
 </body>
 </html>
+-->
+<!-- make a good day greeeting if the hour is less than 18 -->
+<!--<!DOCTYPE html>
+<html>
+    <title>Helloo </title>
+    <meta charset="UTF-8">
+    <head>
+        <title>
+            Good Day
+        </title>
+    </head>
+    <body h1>
+        <script>
+            var hour = prompt("enter the number: ")
+            if (hour < 18){
+                document.write("Good Day")
+            }
+            else if (hour == 18){
+                document.write("Best Day")
+            }
+            else if
+            {
+                document.write("Bad Day")
+            }
+
+        </script>
+    </body>
+</html>-->
+<!-- Write a program for a a candiadte if canditates age is 18 then he is driving or elegibkle for dirving else not-->
+<!--<!DOCTYPE html>
+<html>
+    <title>Helloo </title>
+    <meta charset="UTF-8">
+    <head>
+        <title>
+            Good Day
+        </title>
+    </head>
+    <body>
+        <script>
+            var age = prompt("enter the age: ")
+            if (age < 18){
+                document.write("Not eligible for driving")
+            }
+            else if (age == 18){
+                document.write("has become eligible for driving")
+            }
+            else
+            {
+                document.write("Must have one kay Kar raha hai tu jindigi mai.")
+            }
+
+        </script>
+    </body>
+</html>-->
+
+<!--WAP to print days of a week by using if else if prime no valid else invalid-->
+<!--Execute a program to impliment even or odd number-->
+<!--
+<!DOCTYPE html>
+<html>
+    <title>Helloo </title>
+    <head>
+        <title>
+            Good Day
+        </title>
+    </head>
+    <body h1>
+        <script>
+            var day = prompt("Enter the day: ")
+            if (1 <= day & day <= 7) {
+                if (day == 1){
+                    document.write("Monday")
+                }
+                else if (day == 2){
+                    document.write("Tuesday")
+                }
+                else if (day == 3){
+                    document.write("Wednesday")
+                }
+                else if (day == 4){
+                    document.write("Thursday")
+                }
+                else if (day == 5){
+                    document.write("Friday")
+                }
+                else if (day == 6){
+                    document.write("Saturday")
+                }
+                else if (day == 7){
+                    document.write("Sunday")
+                }
+                else {
+                    document.write("Galat number dala tune")
+                }
+            }
+        </script>
+    </body>
+</html>-->
+<!--WAP to check whether the no. is prime or not.-->
+<!--
+<!DOCTYPE html>
+<html>
+    <title>Helloo </title>
+    <head>
+        <title>
+            Good Day
+        </title>
+    </head>
+    <body h1>
+        <script>
+            var number = prompt("Enter the number: ")
+            if ((number//2) == 0 & (number//3) == 0 & (number//7) == 0){
+
+            } 
+        </script>
+    </body>
+</html>
+-->
+
