--- a/HTML/Sem1Project/Medical appoinment.html
+++ b/HTML/Sem1Project/Medical appoinment.html
@@ -28,6 +28,69 @@
                     <a class="button" href="#">Learn More</a>
                 </div>
             </div>
+            
+            <!--Landing Page-->
+            <div class="landing">
+                <div class="landingText" data-aos="fade-up" data-aous-duration="1000">      <!--For attribute of animate and scroll-->
+                    <h1>
+                        Bringing the Feature of the <span style="color: #e0501b; font-size: 5vw;"></span> Health Care
+                    </h1>
+                    <h3>
+                        Deep created replenish herb without night fruit day earth evening Called his green were they're fruitful to over Sea bearing sixth Earth face
+                    </h3>
+                        <div class="btn">
+                            <a href="#">Read More</a>
+                        </div>  
+                </div>
+                <div class="landingImage" data-aos="fade-down" data-aous-duration="2000">
+                    <img src="images/banner_img.jpg">
+                </div>               <!--This is for the animation scroll-->
+            </div>
+            <!--Service Section-->
+            <div class="about">
+                <div class="about">
+                    <div class="aboutText" data-aos="fade-up" data-aous-duration="1000">
+                        <h1>
+                            Our Patients Are at the Centre <span style="color: #2f8be0; font-size: 3vw;">Everything We Do</span> 
+                        </h1>
+                        <img src="images/ability_img.png">          <!--Attribute dalne ke liye-->
+                    </div>
+                    <div class="aboutList" data-aos="fade-left" data-aous-duration="1000">
+                        <ol>
+                            <li>
+                                <span>01</span>
+                                <p>
+                                    Modern Technology
+                                </p>
+                            </li>
+                            <li>
+                                <span>02</span>
+                                <p>
+                                    World Class Facilitilies
+                                </p>
+                            </li>
+                            <li>
+                                <span>03</span>
+                                <p>
+                                    Experienced Nurse
+                                </p>
+                            </li>
+                            <li>
+                                <span>04</span>
+                                <p>
+                                    Experienced Doctors
+                                </p>
+                            </li>
+                            <li>
+                                <span>05</span>
+                                <p>
+                                    Hours Support
+                                </p>
+                            </li>
+                        </ol>
+                    </div>    <!--Ye mera scrolling ke liye effecgt provide karga-->
+                </div>               
+            </div>
         </div>
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
         <script>
