--- a/HTML/Sem1Project/Medical appoinment.html
+++ b/HTML/Sem1Project/Medical appoinment.html
@@ -7,9 +7,11 @@
         <title>
             Hospital Responsive WebSite
         </title>
-        <link rel = "stylesheet" href = "style.css">
         <link rel = "stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css">
-
+        <link href = <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+        <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
 
@@ -18,7 +20,7 @@
                 <div class="logo">
                     <img src = "images/logo.png">
                 </div>
-                <div class="links">\
+                <div class="links">
                     <a href="#" class="mainlink">Home</a>
                     <a href="#">About</a>
                     <a href="#">Doctors</a>
@@ -60,36 +62,112 @@
                             <li>
                                 <span>01</span>
                                 <p>
-                                    Modern Technology
+                                    Modern Technology.
                                 </p>
                             </li>
                             <li>
                                 <span>02</span>
                                 <p>
-                                    World Class Facilitilies
+                                    World Class Facilitilies.
                                 </p>
                             </li>
                             <li>
                                 <span>03</span>
                                 <p>
-                                    Experienced Nurse
+                                    Experienced Nurse.
                                 </p>
                             </li>
                             <li>
                                 <span>04</span>
                                 <p>
-                                    Experienced Doctors
+                                    Experienced Doctors.
                                 </p>
                             </li>
                             <li>
                                 <span>05</span>
                                 <p>
-                                    Hours Support
+                                    Hours Support.
                                 </p>
                             </li>
                         </ol>
                     </div>    <!--Ye mera scrolling ke liye effecgt provide karga-->
-                </div>               
+                </div>
+                
+                <!--Info Section-->
+                <div class="infoSection">
+                    <div class="infoHeader" data-aos="fade-up" data-aous-duration="1000">
+                        <h1>
+                            We Analyse Your Health States <br> <span style="color: #e0501b;"></span>In Order To Top Service.
+                        </h1>
+                    </div>
+                    <div class="infoCards">
+                        <div class="card one" data-aos="fade-up" data-aous-duration="1000">
+                            <img src="images/banner_1.svg" class="cardoneImg" data-aos="fade-up" data-aous-duration="1100">
+                            <div class="cardbgone"></div>
+                            <div class="cardcontent">
+                                <h2>Health Service</h2>
+                                <p>As so vulgar to on Points wanted rapture ous resolving continued household.</p>
+                                <a href="#">
+                                    <div class="cardBtn">
+                                        <img src="images/next.png" alt=""  class="cardIcon">
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card two" data-aos="fade-up" data-aous-duration="1300">
+                            <img src="images/banner_1.svg" class="cardtwoImg" data-aos="fade-up" data-aous-duration="1200">
+                            <div class="cardbgone"></div>
+                            <div class="cardcontent">
+                                <h2>Easy Appoinment</h2>
+                                <p>To get an Appoinment with our top class Doctors Please Click on the Register Now Button.</p>
+                                <a href="#">
+                                    <div class="cardBtn">
+                                        <img src="images/next.png" alt=""  class="cardIcon">
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card three" data-aos="fade-up" data-aous-duration="1600">
+                            <img src="images/banner_1.svg" class="cardthreeImg" data-aos="fade-up" data-aous-duration="1300">
+                            <div class="cardbgone"></div>
+                            <div class="cardcontent">
+                                <h2>Qualified Doctors</h2>
+                                <p>To Know more about our top class Doctors Please Click on the See More Button.</p>
+                                <a href="#">
+                                    <div class="cardBtn">
+                                        <img src="images/next.png" alt=""  class="cardIcon">
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Banner And Footer-->
+                <div class="banner">
+                    <div class="bannerText" data-aos="fade-right" data-aous-duration="1000">
+                        <h1>Download the Medisen App Today<br><span style="font-size: 1.6; font-weight: normal;" class="bannerInnerText">
+                            Stay Updated and get all Your medical needs taken care of!
+                        </span></h1>
+                        <a href="#"><img src="images/AndroidPNG.png"></a>
+                        <a href="#"><img src="images/iosPNG.png"></a>
+                    </div>
+                    <div class="bannerImg" data-aos="fade-up" data-aous-duration="1000">
+                        <img src="images/app.png" alt="">
+                    </div>
+                </div>
+
+                <div class="footer">
+                    <h1>Medisen</h1>
+                    <div class="footerlinks">
+                        <a href="#" class="mainlink">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Doctors</a>
+                        <a href="#">Services</a>
+                        <a href="#">News</a>
+                        <a href="#">Contact</a>
+                    </div>
+                </div>
+
             </div>
         </div>
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
