--- a/JavaScript/Learning/Learning1.html
+++ b/JavaScript/Learning/Learning1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta charset="utf-8">
   
 <head>
     <title>
@@ -11,8 +12,7 @@
   
     <!-- JavaScript code can be embedded inside
         head section or body section -->
-    <script>
-        console.log("Welcome to GeeksforGeeks");
+    <script src="learning1.js">
     </script>
 </body>
   
