--- a/HTML/Learn/hello.html
+++ b/HTML/Learn/hello.html
@@ -162,4 +162,116 @@
     </body>
 </html>
 -->
+<!--
+<!DOCTYPE html>
+<html>
+    <title>Helloo </title>
+    <head>
+        <title>
+            Good Day
+        </title>
+    </head>
+    <body h1>
+        <script>
+            let day = 1;
+                switch (day){
+                    case 1:
+                        document.write("Monday");
+                        break;
+                    case 2:
+                        document.write("Tuseday");
+                        break;
+                    case 3:
+                        document.write("Wednesday");
+                        break;
+                    case 4:
+                        document.write("Thursday");
+                        break;
+                    case 5:
+                        document.write("Friday");
+                        break;
+                    case 6:
+                        document.write("Saturday");
+                        break;
+                    case 7:
+                        document.write("Sunday");
+                        break;     
+                    default:
+                        document.write("Valid no. de bhai kay karraha hai to jindigi mai haiiiiii........");
+                }
+        </script>
+    </body>
+</html>
+-->
+<!--WAp where the switch cases repersent fruit names if fruit is kiwi, apple and mango then print these are fruits otherwise print these are not fruits-->
 
+<!--
+<!DOCTYPE html>
+<html>
+    <title>Helloo </title>
+    <head>
+        <title>
+            Good Day
+        </title>
+    </head>
+    <body h1>
+        <script>
+            let fruit = prompt("Enter the fruit name:");
+                switch (fruit){
+                    case "Apple":
+                        
+                    case "Mango":
+                        
+                    case "Kiwi":
+                        document.write("Fruit");
+                        break;
+                    default:
+                        document.write("Abe ab fruit ka naam bhi nahi de sakta kay karraha hai to jindigi mai haiiiiii???????........");
+                }
+        </script>
+    </body>
+</html>
+-->
+<!--WAP to implement a grading system- by using grades as switch cases such that 
+    grade A represents good job 
+    grade B represents pretty good job 
+    grade C represents just passed 
+    grade D represents not so good 
+    grade E represents fail and 
+    default cases is unknown grade such that while enterng switch block print enterig swith block and at the end block exiting swich block-->
+
+<!DOCTYPE html>
+<html>
+    <title>Helloo </title>
+    <head>
+        <title>
+            Good Day
+        </title>
+    </head>
+    <body h1>
+        <script>
+            let grade = prompt("Enter your grade:");
+            document.write("Entering the switch cases<br/>");
+                switch (grade){
+                    case "A" || "a":
+                        document.write("GOOD JOB<br/>");
+                        break;
+                    case "B" || "b":
+                        document.write("PRETTY GOOD JOB<br/>");
+                        break;
+                    case "C" || "c":
+                        document.write("JUST PASSED<br/>");
+                        break;
+                    case "D" || "d":
+                        document.write("NOT SO GOOD<br/>");
+                        break;
+                    case "E" || "e":
+                        document.write("FAIL<br/>");
+                        break;
+                    default:
+                        document.write("Abe ab fruit ka naam bhi nahi de sakta kay karraha hai to jindigi mai haiiiiii???????........<br/>");
+                }
+            document.write("Exitingg the switch cases<br/>")    
+        </script>
+    </body>
+</html>
