--- a/HTML/Sem1Project/Medical appoinment.html
+++ b/HTML/Sem1Project/Medical appoinment.html
@@ -22,11 +22,11 @@
                 </div>
                 <div class="links">
                     <a href="#" class="mainlink">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Doctors</a>
-                    <a href="#">Services</a>
-                    <a href="#">News</a>
-                    <a href="#">Contact</a>
+                    <a href="https://www.medicoverhospitals.in/about-us">About</a>
+                    <a href="https://drlogy.com/blog/free-doctor-listing-sites">Doctors</a>
+                    <a href="https://www.apollohospitals.com/">Services</a>
+                    <a href="https://health.economictimes.indiatimes.com/news/hospitals">News</a>
+                    <a href="https://www.apollohospitals.com/contact-us/">Contact</a>
                     <a class="button" href="#">Learn More</a>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                         <div class="cardbgtwo"></div>
                         <div class="cardcontent">
                             <h2>Easy Appoinment</h2>
-                            <p>To get an Appoinment with our top class Doctors Please Click on the Register Now Button.</p>
+                            <p>To get an Appoinment with our top class Doctors Please Click on the Button.</p>
                             <a href="#">
                                 <div class="cardBtn">
                                     <img src="images/next.png" alt=""  class="cardIcon">
