--- a/HTML/Sem1Project/Medical appoinment.html
+++ b/HTML/Sem1Project/Medical appoinment.html
@@ -120,7 +120,7 @@
                         <div class="cardcontent">
                             <h2>Easy Appoinment</h2>
                             <p>To get an Appoinment with our top class Doctors Please Click on the Button.</p>
-                            <a href="#">
+                            <a href="Medical form.html" >
                                 <div class="cardBtn">
                                     <img src="images/next.png" alt=""  class="cardIcon">
                                 </div>
