--- a/HTML/Sem1Project/Medical form.html
+++ b/HTML/Sem1Project/Medical form.html
@@ -34,7 +34,7 @@
 			width: 100%;
 		}
 		button[type=submit]:hover {
-			background-color: #45a049;
+			background-color: #000;
 		}
 		.container {
 			padding: 16px;
