--- a/HTML/Sem1Project/Medical appoinment.html
+++ b/HTML/Sem1Project/Medical appoinment.html
@@ -107,7 +107,7 @@
                         <div class="cardcontent">
                             <h2>Health Service</h2>
                             <p>As so vulgar to on Points wanted rapture ous resolving continued household.</p>
-                            <a href="#">
+                            <a href="https://main.mohfw.gov.in/">
                                 <div class="cardBtn">
                                     <img src="images/next.png" alt=""  class="cardIcon">
                                 </div>
@@ -133,7 +133,7 @@
                         <div class="cardcontent">
                             <h2>Qualified Doctors</h2>
                             <p>To Know more about our top class Doctors Please Click on the See More Button.</p>
-                            <a href="#">
+                            <a href="https://drlogy.com/blog/free-doctor-listing-sites">
                                 <div class="cardBtn">
                                     <img src="images/next.png" alt=""  class="cardIcon">
                                 </div>
@@ -162,11 +162,11 @@
                 <h1>Medisen</h1>
                 <div class="footerlinks">
                     <a href="#" class="mainlink">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Doctors</a>
-                    <a href="#">Services</a>
-                    <a href="#">News</a>
-                    <a href="#">Contact</a>
+                    <a href="https://www.medicoverhospitals.in/about-us">About</a>
+                    <a href="https://drlogy.com/blog/free-doctor-listing-sites">Doctors</a>
+                    <a href="https://www.apollohospitals.com/">Services</a>
+                    <a href="https://health.economictimes.indiatimes.com/news/hospitals">News</a>
+                    <a href="https://www.apollohospitals.com/contact-us/">Contact</a>
                 </div>
             </div>
 
