--- a/HTML/Sem1Project/Medical form.html
+++ b/HTML/Sem1Project/Medical form.html
@@ -139,9 +139,9 @@
               <a href="#!"class="text">Terms of Use</a></div>
         </div>
     </div>
-</footer>
+  </footer>
 
-      <script src="main.js"></script>
+    <!--  <script src="main.js"></script>-->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
