--- a/JavaScript/Learning/Learning1.html
+++ b/JavaScript/Learning/Learning1.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-    <meta charset="utf-8">
-  
+<html>
 <head>
-    <title>
-        Basic Example to Describe JavaScript
-    </title>
+    <title>My Learning Page</title>
+    <script src="learning1.js"></script>
 </head>
-  
 <body>
-  
-    <!-- JavaScript code can be embedded inside
-        head section or body section -->
-    <script src="learning1.js">
-    </script>
+    <h1>Welcome to My Learning Page</h1>
+    <p>This is a basic HTML page that uses a JavaScript file.</p>
 </body>
-  
 </html>
