--- a/JavaScript/Learning/Learning1.html
+++ b/JavaScript/Learning/Learning1.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>My Learning Page</title>
-    <script src="learning1.js"></script>
 </head>
 <body>
     <h1>Welcome to My Learning Page</h1>
     <p>This is a basic HTML page that uses a JavaScript file.</p>
+    <script src="learning1.js">
+    </script>
 </body>
 </html>
