--- a/JavaScript/Learning/Learning1.html
+++ b/JavaScript/Learning/Learning1.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,4 +10,302 @@
     <script src="learning1.js">
     </script>
 </body>
+</html>
+-->
+<!--
+<!DOCTYPE html> 
+<html lang="en"> 
+
+<head> 
+	<title> 
+		Basic Example to Describe JavaScript 
+	</title> 
+</head> 
+
+<body> 
+
+	<!-- JavaScript code can be embedded inside head section or body section of HTML page.
+
+	<script> 
+		document.write("Welcome to GeeksforGeeks"); 
+	</script> 
+</body> 
+
+</html>
+
+-->
+<!--
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>
+		Add JavaScript Code inside Head Section
+	</title>
+
+	<script>
+		function myFun() {
+			document.getElementById("demo")
+				.innerHTML = "Content changed!";
+		}
+	</script>
+</head>
+
+<body>
+	<h2>
+		Add JavaScript Code 
+		inside Head Section
+	</h2>
+
+	<h3 id="demo" style="color:green;">
+		GeeksforGeeks
+	</h3>
+
+	<button type="button" onclick="myFun()">
+		Click Here
+	</button>
+</body>
+
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>
+		Add JavaScript Code inside Body Section
+	</title>
+</head>
+
+<body>
+	<h2>
+		Add JavaScript Code 
+		inside Body Section
+	</h2>
+
+	<h3 id="demo" style="color:green;">
+		GeeksforGeeks
+	</h3>
+
+	<button type="button" onclick="myFun()">
+		Click Here
+	</button>
+
+	<script>
+		function myFun() {
+			document.getElementById("demo")
+				.innerHTML = "Content changed!";
+		}
+	</script>
+</body>
+
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>
+		External JavaScript
+	</title>
+	<script src="learning1.js"></script>
+</head>
+
+<body>
+	<h2>
+		External JavaScript
+	</h2>
+
+	<h3 id="demo" style="color:green;">
+		GeeksforGeeks
+	</h3>
+
+	<button type="button" onclick="myFun()">
+		Click Here
+	</button>
+</body>
+
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>JavaScript Output</title>
+</head>
+
+<body>
+	<h1>GeeksforGeeks</h1>
+	<h2>
+		JavaScript Display Possibilities
+		Using innerHTML
+	</h2>
+	<p id="GFG"></p>
+
+	<!-- Script to use innerHTML 
+	<script>
+		document.getElementById("GFG").innerHTML
+			= 10 * 2;
+	</script>
+
+</body>
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<title>JavaScript Output</title>
+</head>
+
+<body>
+	<h1>GeeksforGeeks</h1>
+	<h2>
+		JavaScript Display Possibilities
+		Using document.write()
+	</h2>
+	<p id="GFG"></p>
+	<!-- Script to uses document.write() 
+	<script>
+		document.write(10 * 2);
+	</script>
+
+</body>
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<title>JavaScript Output</title>
+</head>
+
+<body>
+	<h1>GeeksforGeeks</h1>
+	<h2>
+		JavaScript Display Possibilities
+		Using window.alert()
+	</h2>
+	<p id="GFG"></p>
+	<!-- Script to use window.alert() 
+	<script>
+		window.alert(10 * 2);
+	</script>
+</body>
+
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<title>JavaScript Output</title>
+</head>
+
+<body>
+	<h1>GeeksforGeeks</h1>
+	<h2>
+		JavaScript Display Possibilities
+		Using console.log()
+	</h2>
+	<p id="GFG"></p>
+	<!-- Script to use console.log() 
+	<script>
+		console.log(10 * 2);
+	</script>
+</body>
+
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<title>JavaScript Output</title>
+</head>
+
+<body>
+	<h1>GeeksforGeeks</h1>
+	<h2>
+		JavaScript Display Possibilities
+		Using window.alert()
+	</h2>
+	<p id="GFG"></p>
+	<!-- Script to use window.alert() 
+	<script>
+		window.prompt("Please Enter your Input");
+	</script>
+</body>
+
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport"
+		content="width=device-width, 
+				initial-scale=1.0">
+	<title>JavaScript Output Examples</title>
+</head>
+
+<body>
+
+	<h1>JavaScript Output Example</h1>
+
+	<script>
+
+		var outputContainer = document.createElement("div");
+
+		var userInput = window.prompt('Enter something:');
+		var output = document.createElement("p");
+		output.appendChild(document
+						.createTextNode('You entered: ' + userInput));
+		outputContainer.appendChild(output);
+
+		document.body.appendChild(outputContainer);
+	</script>
+
+</body>
+
+</html>
+-->
+<!--
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>
+		External JavaScript
+	</title>
+</head>
+
+<body>
+	<script src="learning1.js"></script>
+</body>
+
+</html>
+-->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>
+		External JavaScript
+	</title>
+</head>
+
+<body>
+	<script src="learning1.js"></script>
+</body>
+
 </html>
